--- a/package.json
+++ b/package.json
@@ -38,6 +38,11 @@
     ]
   },
   "devDependencies": {
-    "json-server": "^1.0.0-beta.3"
+    "@types/jest": "^30.0.0",
+    "@types/node": "^24.10.0",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
+    "json-server": "^1.0.0-beta.3",
+    "typescript": "^5.9.3"
   }
 }
